Fixed shifted texts of buttons.

--- a/css/styles_general.css
+++ b/css/styles_general.css
@@ -181,7 +181,7 @@ a:active {
 	color: #ffffff;
 	font: 40px sans-serif, Arial;
 	margin: 10px;
-	padding: 25px 0;
+	padding: 0 0;
 	border-radius: 25px;
 	border-width: 0;
 	height: 50px;
